--- a/client/templates/dashboards.html
+++ b/client/templates/dashboards.html
@@ -4,6 +4,9 @@
   </head>
   <body>
     <h1>Dashboard</h1>
+    {{#each widgets}}
+     {{> widget data}}
+    {{/each}}
   </body>
 </html>
 </template>
