starting to work

--- a/client/templates/dashboards.html
+++ b/client/templates/dashboards.html
@@ -1,12 +1,43 @@
+<head>
+<title>Dashboards</title>
+</head>
+
+<body>
+</body>
+
 <template name="DashboardsShow">
-<html>
-  <head>
-  </head>
-  <body>
-    <h1>Dashboard</h1>
-    {{#each widgets}}
-     {{> widget data}}
-    {{/each}}
-  </body>
-</html>
+  <h1>Dashboard</h1>
+  {{#each widgets}}
+   {{> widget data}}
+  {{/each}}
+  {{> DashboardsAdd }}
+</template>
+
+
+<template name="DashboardsAdd">
+<a href="#" class="add_widget" data-toggle="modal" data-target=".add_widget_modal">+</a>
+
+<div class="add_widget_modal modal fade" tabindex="-1" role="dialog" aria-labelledby="addWidget" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">
+          <span aria-hidden="true">&times;</span>
+          <span class="sr-only">Close</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Add a Widget</h4>
+      </div>
+      <div class="modal-body">
+        {{# each availableWidgets }}
+        <div class="widget_option">
+          <a href="#">Add {{ displayName }}</a>
+        </div>
+        {{/each}}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 </template>
