--- a/client/templates/dashboards.html
+++ b/client/templates/dashboards.html
@@ -7,9 +7,41 @@
 
 <template name="DashboardsShow">
   <h1>Dashboard</h1>
+  <div class="dashboard">
   {{#each widgets}}
-   {{> widget data}}
+  <div class="widget col-{{ width }} row-{{ height }} {{ widgetId }}">
+    <div class="buttons">
+      {{# if providesInfo }}
+      <a class="about" href="#" id="{{ widgetId 'about' }}"
+        title="About" data-toggle="popover" data-trigger="click"
+        data-html="true" data-placement="auto right">
+        <span class="glyphicon glyphicon-info-sign">&nbsp;</span>
+      </a>
+      <div class="popover" data-opener="{{ widgetId 'about' }}" role="tooltip">
+        <div class="arrow"></div>
+        <h3 class="popover-title">About</h3>
+        <div class="popover-content">{{> Template.dynamic template=infoTemplate data=data }}</div>
+      </div>
+      {{/if}}
+
+      {{# if providesSettings }}
+      <a class="settings" href="#" id="{{ widgetId 'settings' }}"
+        title="Settings" data-toggle="popover" data-trigger="click"
+        data-html="true" data-placement="auto right">
+        <span class="glyphicon glyphicon-cog">&nbsp;</span>
+      </a>
+      <div class="popover" data-opener="{{ widgetId 'settings' }}" role="tooltip">
+        <div class="arrow"></div>
+        <h3 class="popover-title">Settings</h3>
+        <div class="popover-content">{{> Template.dynamic template=settingsTemplate data=data }}</div>
+      </div>
+      {{/if}}
+    </div>
+
+   {{> Template.dynamic template=widgetTemplate data=data }}
+  </div>
   {{/each}}
+  </div>
   {{> DashboardsAdd }}
 </template>
 
@@ -29,7 +61,7 @@
       </div>
       <div class="modal-body">
         {{# each availableWidgets }}
-        <div class="widget_option">
+        <div class="widget-option">
           <a href="#">Add {{ displayName }}</a>
         </div>
         {{/each}}
