--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -83,6 +83,10 @@ a.btn-add-widget {
     margin-left: 3px;
     color: #CBCBCB;
 
+    &:hover, &:focus {
+      text-decoration: none;
+    }
+
     &.remove-widget {
       margin-left: 0;
       &:hover {
