save widget positions

--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -17,8 +17,11 @@ h1, h2 {
 
 #dashboard {
   position: relative;
-  width: 90%;
-  margin: 0 auto;
+  /*width: 90%;
+  margin: 0 auto;*/
+  .preview-holder {
+    background: red !important;
+  }
 }
 
 a.btn-add-widget {
@@ -106,4 +109,8 @@ a.btn-add-widget {
 
 .my-popover-content {
   display: none;
+}
+
+.gridster > * { 
+  margin: 0;
 }
