fixing up flows

--- a/client/templates/dashboards.html
+++ b/client/templates/dashboards.html
@@ -8,10 +8,7 @@
 <template name="DashboardsShow">
   {{ test }}
   <div id="dashboard" class="gridster">
-  <ul>
-  {{#each widgets}}
-    {{! WidgetShow }}
-  {{/each}}
+  <ul id="widgets">
   </ul>
   </div>
   {{> DashboardsAdd }}
