--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -21,8 +21,8 @@ h1, h2 {
   /*width: 90%;
   margin: 0 auto;*/
   .preview-holder {
-    background: #68C9FC !important;
-    border-radius: 6px;
+    background: #428BCA !important;
+    border-radius: 5px;
     border: 1px dashed #FFF;
   }
 }
