connection speed widget

--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -50,14 +50,16 @@ a.btn-add-widget {
   position: relative;
   border: 0;
   cursor: default;
-  border-radius: 5px;
+  border-radius: 3px;
   -webkit-box-shadow: 0.25em 0.25em 0.33em rgba(0, 0, 0, 0.07);
   box-shadow: 0.25em 0.25em 0.33em rgba(0, 0, 0, 0.07);
   background-color: white;
   color: #333;
-}
-.widget h1 {
-  margin-top: 0;
+  h1 {
+    font-size: 32px;
+    margin-top: 0;
+    margin-bottom: 3px;
+  }
 }
 .inner {
 }
