--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -23,7 +23,7 @@ h1, h2 {
   .preview-holder {
     background: #428BCA !important;
     border-radius: 5px;
-    border: 1px dashed #FFF;
+    border: 1px dotted #FFF;
   }
 }
 
@@ -93,6 +93,7 @@ a.btn-add-widget {
 
     &:hover, &:focus {
       text-decoration: none;
+      color: #428BCA;
     }
 
     &.remove-widget {
