--- a/packages/wikiedits/client/widget.css
+++ b/packages/wikiedits/client/widget.css
@@ -4,9 +4,9 @@
 
 .wiki-history {
   position: relative;
-  height: 96px;
-  width: 120%;
-  left: -30px;
+  height: 75px;
+  width: 320px;
+  left: -18px;
 }
 
 .wiki-history .edits .area {
