--- a/packages/mediacloud/client/widget.css
+++ b/packages/mediacloud/client/widget.css
@@ -1,8 +1,7 @@
 .mediacloud {
-  padding: 10px 20px;
+  padding: 10px 18px;
 }
 
-.mc-wordlist {
-  padding-left: 0;
-  list-style-type: none;
+.mc-tagcloud {
+  margin: 0 -18px;
 }
