--- a/packages/wikiedits/client/widget.css
+++ b/packages/wikiedits/client/widget.css
@@ -21,7 +21,7 @@
   position: absolute;
   bottom: 5px;
   right: 10px;
-  color: white;
+  color: #DFDFDF;
   font-size: 2em;
   z-index: 1000;
   font-weight: 300;
