--- a/packages/lumen/client/widget.css
+++ b/packages/lumen/client/widget.css
@@ -6,12 +6,11 @@
   font-size: 1em;
 }
 .lumen .url-counts {
-  height: 70px;
+  height: 80px;
 }
-.lumen .axis.bottom text {
-  font-size: 0.8em;
-}
-
 .lumen .url-counts .bar {
   fill: #428BCA;
+}
+.epoch .axis .tick text {
+  font-size: 8pt;
 }
