--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,6 +1,13 @@
 <template name="Home">
-<h1>Home</h1>
-<a class="btn btn-primary" href="{{ pathFor route='dashboards.new' }}">
-  New Dashboard
-</a>
+{{> Header }}
+<div class="container">
+  <div class="jumbotron">
+    <h1>Welcome!</h1>
+    <p>The Internet Dashboard is an internet dashboard.</p>
+    <a class="btn btn-success btn-lg" href="{{ pathFor route='dashboards.new' }}">
+      New Dashboard
+    </a>
+  </div>
+</div>
+{{> Footer }}
 </template>
