bits of cleanup

--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -11,6 +11,10 @@ body {
   font-family: Lato;
   font-weight: 300;
   overflow-y: scroll;
+
+  &.modal-open {
+    overflow-y: scroll;
+  }
 }
 h1, h2 {
   font-weight: 300;
