addresses #12062 - source links in info

--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -119,6 +119,16 @@ a.btn-add-widget {
   bottom: -50px;
 }
 
+.popover {
+  max-width: 400px;
+
+  .close {
+    position: absolute;
+    top: 6px;
+    right: 10px;
+  }
+}
+
 .my-popover-content {
   display: none;
 }
