fix home padding

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,6 +1,6 @@
 <template name="Home">
 {{> Header }}
-<div class="container">
+<div class="container home">
   <div class="jumbotron">
     <h1>Welcome!</h1>
     <p>The Internet Dashboard is an internet dashboard.</p>
