--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700);
+@import url(//fonts.googleapis.com/css?family=Lato:100,300,400,700);
 
 body {
   /*background-image: url(../images/backdrop4.jpg);
