--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -13,6 +13,11 @@
     margin-top: 0;
     margin-bottom: 3px;
   }
+  h2 {
+    margin-top: 0.2em;
+    font-size: 1.6em;
+    margin-bottom: 0.4em;
+  }
   
   .buttons {
     position: absolute;
@@ -41,8 +46,9 @@
     margin: 0;
     position: absolute;
     bottom: 3px;
-    right: 5px;
-    font-size: 0.8em;
+    right: 6px;
+    font-size: 11px;
+    z-index: 1000;
   }
 }
 
