--- a/packages/lumen/client/widget.css
+++ b/packages/lumen/client/widget.css
@@ -1,12 +1,12 @@
 .lumen {
-  padding: 10px 18px 0;
+  padding: 6px 12px;
 }
 .lumen h2 {
   margin: 0 0 0.2em;
   font-size: 1em;
 }
 .lumen .url-counts {
-  height: 80px;
+  height: 72px;
 }
 .lumen .url-counts .bar {
   fill: #428BCA;
