--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -50,23 +50,44 @@
     font-size: 11px;
     z-index: 1000;
   }
+
+  &.col-1 {
+    width: 150px;
+  }
+  &.col-2 {
+    width: 320px;
+
+    &.row-1 {
+      padding: 6px 12px;
+    }
+
+    &.row-2 {
+      padding: 7px 15px;
+    }
+
+    &.row-3 {
+      padding: 6px 15px;
+    }
+  }
+  &.col-3 {
+    width: 490px;
+
+    &.row-1 {
+      padding: 6px 15px;
+    }
+
+    &.row-2 {
+      padding: 7px 17px;
+    }
+  }
+  &.row-1 {
+    height: 150px;
+  }
+  &.row-2 {
+    height: 320px;
+  }
+  &.row-3 {
+    height: 490px;
+  }
 }
 
-.widget.col-1 {
-  width: 150px;
-}
-.widget.col-2 {
-  width: 320px;
-}
-.widget.col-3 {
-  width: 490px;
-}
-.widget.row-1 {
-  height: 150px;
-}
-.widget.row-2 {
-  height: 320px;
-}
-.widget.row-3 {
-  height: 490px;
-}
