clean up bytes delivered

--- a/client/templates/dashboards.html
+++ b/client/templates/dashboards.html
@@ -33,13 +33,16 @@
         <h4 class="modal-title" id="myModalLabel">Add a Widget</h4>
       </div>
       <div class="modal-body">
+        <ul class="list-group widget-options">
         {{# each availableWidgets }}
-        <div class="widget-option">
-          <a href="#" class="add-widget">Add {{ widget.name }}</a>
-          <p>{{ widget.description }}</p>
-          <p>Data provided by: <a href="{{ org.url }}" target="_blank">{{ org.name }}</a></p>
-        </div>
+          <li class="widget-option list-group-item">
+            <a href="#" class="add-widget btn btn-success btn-sm pull-right"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
+            <h2>{{ widget.name }}</h2>
+            <p>{{ widget.description }}</p>
+            <small class="provided-by">Data provided by: <a href="{{ org.url }}" target="_blank">{{ org.name }}</a></small>
+          </li>
         {{/each}}
+        </ul>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
