--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -81,3 +81,14 @@ a.btn-add-widget {
     font-weight: 300;
   }
 }
+
+.widget-options {
+  max-height: 600px;
+  overflow-y: auto;
+  border-bottom: 2px solid #D3D3D3;
+
+  h2 {
+    margin-top: 0;
+    font-size: 1.7em;
+  }
+}
