--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -20,11 +20,13 @@ h1, h2 {
   font-weight: 300;
 }
 
+#wrapper {
+ padding-top: 111px;
+}
+
 #dashboard {
   position: relative;
-  padding: 135px 20px;
-  /*width: 90%;
-  margin: 0 auto;*/
+  padding: 20px;
   .preview-holder {
     background: #428BCA !important;
     border-radius: 5px;
@@ -73,7 +75,7 @@ a.btn-add-widget {
 }
 
 .home {
-  padding-top: 135px;
+  padding-top: 40px;
 }
 
 .jumbotron {
