--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -4,10 +4,10 @@
   <a href="http://cyber.law.harvard.edu" title="Berkman Center For Internet and Society" class="berkman-link"></a>
   <nav>
     <ul>
-      <li><a href="/about">about</a></li>
-      <li><a href="/contact">contact</a></li>
-      <li><a href="/blog">blog</a></li>
-      <li><a href="/terms-of-service">terms &amp; privacy</a></li>
+      <li><a href="http://thenetmonitor.org/about">about</a></li>
+      <li><a href="http://thenetmonitor.org/contact">contact</a></li>
+      <li><a href="http://thenetmonitor.org/blog">blog</a></li>
+      <li><a href="http://thenetmonitor.org/terms-of-service">terms &amp; privacy</a></li>
     </ul>
   </nav>
   <span class="cc">Unless otherwise noted, this site and its contents are licensed under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported</a> license.</span>
