--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -1,5 +1,9 @@
 <head>
-<title>Dashboards</title>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="Internet Dashboard">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Internet Dashboard</title>
 </head>
 
 <body>
