netclerk - simpler URL, value, delta, & arrows!

--- a/packages/netclerk/client/widget.css
+++ b/packages/netclerk/client/widget.css
@@ -30,6 +30,14 @@
   color: green;
 }
 
+.netclerk .up .delta:after {
+  content: '▲';
+}
+
 .netclerk .down {
   color: red;
+}
+
+.netclerk .down .delta:after {
+  content: '▼';
 }
