--- a/packages/netclerk/client/widget.css
+++ b/packages/netclerk/client/widget.css
@@ -21,6 +21,12 @@
   white-space: nowrap;
 }
 
+.netclerk-transition {
+  transition-timing-function: linear;
+  transition-property: left;
+  transition-duration: 9000s;
+}
+
 .netclerk li {
   display: inline-block;
   margin: 0 1em;
