home page text - #12289

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -2,10 +2,14 @@
 <div class="container home">
   <div class="jumbotron">
     <h1>Welcome!</h1>
-    <p>The Internet Dashboard is an internet dashboard.</p>
+    <p>Internet Monitor lets you explore, create, customize, and share
+    dashboards of data visualizations about multiple facets of the Internet.</p>
+    <div class="text-center">
+    <p>Click the "New Dashboard" button to get started.</p>
     <a class="btn btn-success btn-lg" href="{{ pathFor route='dashboards.new' }}">
       New Dashboard
     </a>
+    </div>
   </div>
 </div>
 </template>
