--- a/packages/lumen/client/widget.css
+++ b/packages/lumen/client/widget.css
@@ -2,12 +2,20 @@
   margin: 0 0 0.2em;
   font-size: 1em;
 }
-.lumen .url-counts {
+.lumen .epoch.url-counts {
   height: 72px;
 }
+
 .lumen .url-counts .bar {
   fill: #428BCA;
 }
-.epoch .axis .tick text {
+
+.lumen .axis .tick text {
   font-size: 8pt;
+}
+
+.lumen .url-counts .axis path, .axis line {
+  fill: none;
+  stroke: #888;
+  shape-rendering: crispEdges;
 }
