--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,7 +1,7 @@
 <template name="Home">
 <div class="container home">
   <div class="jumbotron">
-    <h1>Welcome!</h1>
+    <h1>Welcome, Jack!</h1>
     <p>Internet Monitor lets you explore, create, customize, and share
     dashboards of data visualizations about multiple facets of the Internet.</p>
     <div class="text-center">
