--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -8,6 +8,7 @@
   box-shadow: 0.25em 0.25em 0.33em rgba(0, 0, 0, 0.07);
   background-color: white;
   color: #333;
+
   h1 {
     font-size: 32px;
     margin-top: 0;
@@ -18,38 +19,45 @@
     font-size: 1.6em;
     margin-bottom: 0.4em;
   }
-  
-  .buttons {
-    position: absolute;
-    top: 5px;
-    right: 7px;
-    
-    a {
-      margin-left: 1px;
-      color: #CBCBCB;
 
-      &:hover, &:focus {
-        text-decoration: none;
-        color: #428BCA;
-      }
+  .title-bar {
+    width: 100%;
+    height: 20px;
+    background-color: #F0F0F0;
+    cursor: move;
 
-      &.remove-widget {
-        margin-left: 0;
-        &:hover {
-          color: darkred;
+    .buttons {
+      padding-left: 4px;
+      padding-top: 1px;
+      max-width: 60px;
+      cursor: default;
+
+      a {
+        margin-left: 1px;
+        color: #BABABA;
+
+        &:hover, &:focus {
+          text-decoration: none;
+          color: #428BCA;
+        }
+
+        &.remove-widget {
+          margin-left: 0;
+          &:hover {
+            color: darkred;
+          }
         }
       }
     }
+    .data-source {
+      padding: 0;
+      margin: 0;
+      padding-right: 6px;
+      float: right;
+      z-index: 1000;
+    }
   }
 
-  .widget-data-source {
-    margin: 0;
-    position: absolute;
-    bottom: 3px;
-    right: 6px;
-    font-size: 11px;
-    z-index: 1000;
-  }
 
   &.col-1 {
     width: 150px;
@@ -58,36 +66,36 @@
     width: 320px;
 
     &.row-1 {
-      padding: 6px 12px;
+      .widget-body { padding: 6px 12px; }
     }
 
     &.row-2 {
-      padding: 7px 15px;
+      .widget-body { padding: 7px 15px; }
     }
 
     &.row-3 {
-      padding: 6px 15px;
+      .widget-body { padding: 6px 15px; }
     }
   }
   &.col-3 {
     width: 490px;
 
     &.row-1 {
-      padding: 6px 15px;
+      .widget-body { padding: 6px 15px; }
     }
 
     &.row-2 {
-      padding: 7px 17px;
+      .widget-body { padding: 7px 17px; }
     }
   }
   &.row-1 {
-    height: 150px;
+    height: 170px;
   }
   &.row-2 {
-    height: 320px;
+    height: 360px;
   }
   &.row-3 {
-    height: 490px;
+    height: 550px;
   }
 }
 
