--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -23,7 +23,8 @@
   .title-bar {
     width: 100%;
     height: 20px;
-    background-color: #F0F0F0;
+    background-color: rgba(236, 236, 236, 0.6);
+    z-index: 10;
     cursor: move;
 
     .buttons {
