--- a/packages/image-block/client/widget.css
+++ b/packages/image-block/client/widget.css
@@ -1,7 +1,10 @@
+.image-block .widget-body {
+  padding: 0 !important;
+}
 .widget.image-block .title-bar {
   position: absolute;
   background-color: rgba(80, 80, 80, 0.6);
 }
 .image-block .title-bar .buttons a {
-  color: #C5C5C5;
+  color: #DADADA;
 }
