--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -22,7 +22,6 @@
 
   .title-bar {
     width: 100%;
-    height: 20px;
     background-color: rgba(236, 236, 236, 0.6);
     z-index: 10;
     cursor: move;
@@ -59,47 +58,67 @@
     }
   }
 
+  .gs-resize-handle {
+    z-index: 1002;
+  }
+
   .widget-body {
     transform-origin: left top;
+    height: 100%;
+    padding: 7px 17px;
+
+    .resizing-cover {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 1000;
+      background-color: rgba(255, 255, 255, 0.8);
+    }
   }
 
-  &.col-1 {
-    width: 150px;
-  }
-  &.col-2 {
-    width: 320px;
-
-    &.row-1 {
+  &[data-sizex="1"] {
+    &[data-sizey="1"] {
       .widget-body { padding: 6px 12px; }
     }
-
-    &.row-2 {
+    &[data-sizey="2"] {
       .widget-body { padding: 7px 15px; }
     }
-
-    &.row-3 {
-      .widget-body { padding: 6px 15px; }
+    &[data-sizey="3"] {
+      .widget-body { padding: 7px 15px; }
     }
   }
-  &.col-3 {
-    width: 490px;
-
-    &.row-1 {
+  &[data-sizex="2"] {
+    &[data-sizey="1"] {
+      .widget-body { padding: 6px 12px; }
+    }
+    &[data-sizey="2"] {
+      .widget-body { padding: 7px 15px; }
+    }
+    &[data-sizey="3"] {
+      .widget-body { padding: 7px 15px; }
+    }
+  }
+  &[data-sizex="3"] {
+    &[data-sizey="1"] {
       .widget-body { padding: 6px 15px; }
     }
-
-    &.row-2 {
+    &[data-sizey="2"] {
       .widget-body { padding: 7px 17px; }
     }
+    &[data-sizey="3"] {
+      .widget-body { padding: 7px 15px; }
+    }
   }
-  &.row-1 {
-    height: 170px;
+  &[data-sizex="4"] {
+    &[data-sizey="1"] {
+      .widget-body { padding: 6px 15px; }
+    }
   }
-  &.row-2 {
-    height: 360px;
-  }
-  &.row-3 {
-    height: 550px;
+  &[data-sizex="5"] {
+    &[data-sizey="1"] {
+      .widget-body { padding: 6px 15px; }
+    }
   }
 }
-
