make all widgets resize nicely

--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -70,7 +70,7 @@
     .resizing-cover {
       position: absolute;
       top: 0;
-      bottom: 0;
+      bottom: -20px; /* For the title bar */
       left: 0;
       right: 0;
       z-index: 1000;
