--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -61,11 +61,18 @@ a.btn-add-widget {
   line-height: 40px;
   width: 50px;
   height: 50px;
+  z-index: 1000;
+  background-color: rgba(8, 31, 44, 0.15);
 
   &:hover, &:focus, &:visited {
     text-decoration: none;
     outline: none;
     color: #428BCA;
+  }
+
+  &:hover {
+    color: #65A8E5;
+    border-color: #65A8E5;
   }
 }
 
