move popovers into widgets and close strategically

--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -35,6 +35,10 @@ h1, h2 {
   }
 }
 
+#widgets {
+  list-style-type: none;
+}
+
 #instructions {
   margin-top: 3%;
 }
@@ -78,20 +82,6 @@ a.btn-add-widget {
 
 .modal-dialog {
   z-index: 1050;
-}
-
-.popover {
-  max-width: 400px;
-
-  .close {
-    position: absolute;
-    top: 6px;
-    right: 10px;
-  }
-}
-
-.my-popover-content {
-  display: none;
 }
 
 .gridster > * { 
