--- a/packages/wikiedits/client/widget.css
+++ b/packages/wikiedits/client/widget.css
@@ -1,24 +1,12 @@
-.wikiedits p {
-  white-space: nowrap;
+.wikiedit-stream .wikiedits {
+  padding: 0;
+  /* box-shadow: inset 0 0px 8px rgba(0, 0, 0, 0.25);*/
 }
 
-.wiki-history {
-  position: relative;
-  height: 77px;
-  width: 320px;
-  left: -15px;
+.wikiedit-stream .wikiedits li {
+  padding: 3px 10px;
 }
 
-.wiki-history .edits .area {
-  fill: #428BCA;
-}
-
-.wiki-history-count{
-  position: absolute;
-  bottom: 2px;
-  left: 12px;
-  color: #D0D0D0;
-  font-size: 2.2em;
-  z-index: 1000;
-  font-weight: 300;
+.wikiedit-stream .wikiedits li:nth-child(odd) {
+  background: #F4F4F4;
 }
