Tweak copy on homepage

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -5,9 +5,8 @@
     <p>Internet Monitor lets you explore, create, customize, and share
     dashboards of data visualizations about multiple facets of the Internet.</p>
     <div class="text-center">
-    <p>Click the "New Dashboard" button to get started.</p>
     <a class="btn btn-success btn-lg" href="{{ pathFor route='dashboards.new' }}">
-      New Dashboard
+      Get Started
     </a>
     </div>
   </div>
