user accounts package in and configured

--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -11,17 +11,14 @@ body {
   font-family: Lato;
   font-weight: 300;
   overflow-y: scroll;
-
-  &.modal-open {
-    overflow-y: scroll;
-  }
 }
 h1, h2 {
   font-weight: 300;
 }
 
 #wrapper {
- margin-bottom: 40px;
+  padding-top: 20px;
+  margin-bottom: 40px;
 }
 
 #dashboard {
