--- a/client/css/header.css.less
+++ b/client/css/header.css.less
@@ -7,20 +7,26 @@ header {
 
   .navbar {
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-  }
+    .navbar-brand {
+      padding: 5px 10px;
+    }
 
-  .navbar-brand {
-    padding: 5px 10px;
-  }
+    .navbar-right {
+      padding-right: 10px;
+      a {
+        margin-right: 5px;
+      }
+    }
 
-  .logo-image {
-    background: url("imon_logo_banner.png");
-    display: inline-block;
-    height: 40px;
-    width: 383px;
+    .logo-image {
+      background: url("imon_logo_banner.png");
+      display: inline-block;
+      height: 40px;
+      width: 383px;
 
-    &:hover {
-      background-position: 0 -40px;
+      &:hover {
+        background-position: 0 -40px;
+      }
     }
   }
 }
