--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -7,9 +7,20 @@
             <span class="logo-image" title="Internet Monitor"></span>
           </a>
         </div>
-        <ul class="nav navbar-nav navbar-right">
-          {{> loginButtons }}
-        </ul>
+        <div class="navbar-right">
+          {{# if currentUser }}
+            <button class="btn btn-primary sign-out navbar-btn" id="sign-out">
+              Sign Out
+            </button>
+          {{else}}
+            <a href="/accounts/sign-in" class="btn btn-primary navbar-btn">
+              Sign In
+            </a>
+            <a href="/accounts/sign-up" class="btn btn-info navbar-btn">
+              Sign Up
+            </a>
+          {{/if}}
+        </div>
       </div>
     </nav>
   </header>
