closer to working

--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -39,13 +39,6 @@ h1, h2 {
   margin-top: 3%;
 }
 
-.btn-add-widget {
-  color: #428BCA;
-  border: 2px solid #428BCA;
-  border-radius: 50%;
-  text-align: center;
-}
-
 span.btn-add-widget {
   width: 1em;
   height: 1em;
@@ -63,6 +56,13 @@ a.btn-add-widget {
   height: 50px;
   z-index: 1000;
   background-color: rgba(8, 31, 44, 0.15);
+}
+
+.dash-btn {
+  color: #428BCA;
+  border: 2px solid #428BCA;
+  border-radius: 20%;
+  text-align: center;
 
   &:hover, &:focus, &:visited {
     text-decoration: none;
@@ -74,6 +74,16 @@ a.btn-add-widget {
     color: #65A8E5;
     border-color: #65A8E5;
   }
+}
+
+.btn-dash-settings {
+  position: fixed;
+  bottom: 115px;
+  right: 15px;
+  font-size: 19px;
+  line-height: 30px;
+  width: 30px;
+  height: 30px;
 }
 
 .modal-dialog {
