lots more bugfixes

--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -23,7 +23,7 @@ h1, h2 {
 
 #dashboard {
   position: relative;
-  padding: 20px;
+  padding: 0 20px;
   .preview-holder {
     background: #428BCA !important;
     border-radius: 5px;
